--- a/public/briefings/2026-02-20.md
+++ b/public/briefings/2026-02-20.md
@@ -1,41 +1,21 @@
 # Daily Briefing — Friday, February 20, 2026
 
-## Spain
+**1. Police sexual assault scandal deepens as Interior offers protection to whistleblower.** Spain's Interior Ministry has assigned police protection to the female officer who filed a rape complaint against the former head of operations (DAO) of the National Police. New evidence including an audio recording and medical reports were presented to the court. The government commented that "no organization is free of sexist pigs," while senior police sources suggest Minister Marlaska may appoint a woman as the new DAO to address the crisis. ([El País](https://elpais.com/espana/), [El Mundo](https://www.elmundo.es/espana.html), [RTVE](https://www.rtve.es/noticias/espana/), [La Vanguardia](https://www.lavanguardia.com/), [El Periódico](https://www.elperiodico.com/es/))
 
-### Sánchez Reaps Gains from Anti-Trump Stance, Testing U.S. Ties
-Pedro Sánchez's thinly veiled criticisms of U.S. policy are playing well with Spanish voters but irritating Washington. The newly sworn-in U.S. ambassador to Madrid has signaled he'll press Spain to commit to NATO's 5% GDP spending target — an amount Sánchez has resisted. Historians note the PM is drawing on long-standing Spanish resentment of U.S. support for Franco's dictatorship.
-[Source](https://reuters.com/world/spains-sanchez-reaps-gains-anti-trump-stance-testing-ties-with-us-2026-02-20)
+**2. Sagrada Família reaches its highest point as Tower of Jesus is crowned at 172.5 metres.** A three-dimensional cross was placed atop the Tower of Jesus, 144 years after the first stone was laid at Gaudí's iconic basilica. The temple is now the tallest religious structure in Europe and nears completion of its most ambitious phase. ([La Vanguardia](https://www.lavanguardia.com/), [El Periódico](https://www.elperiodico.com/es/), [3cat](https://www.3cat.cat/3catinfo/), [Tot Barcelona](https://www.totbarcelona.cat/))
 
-### Spain Courts China in New Asia Strategy as U.S. Ties Sour
-Spain is planning to build stronger political and financial links with China as part of a new Asia-Pacific strategy outlining Madrid's priorities for the next three years. The move comes as President Trump upends the global economic order. The strategy calls for more high-level meetings and economic exchanges, while encouraging other European countries to coordinate their approach to Beijing.
-[Source](https://www.bloomberg.com/news/articles/2026-02-20/spain-courts-china-in-new-asia-strategy-as-us-ties-sour)
+**3. Rodalies commuter trains still disrupted one month after the Gelida accident.** Barcelona's commuter rail network continues to suffer delays and speed restrictions across 200 points a month after the derailment at Gelida. A new challenge looms with the upcoming closure of the Garraf tunnels for maintenance, threatening further chaos for commuters south of Barcelona. ([El Periódico](https://www.elperiodico.com/es/), [El Periódico Barcelona](https://www.elperiodico.com/es/barcelona/), [3cat](https://www.3cat.cat/3catinfo/))
 
-### Spain Reveals EU "E6" Supergroup Plan to Challenge U.S. and China
-Spain has unveiled plans for an exclusive club among the EU's six largest economies — France, Germany, Italy, the Netherlands, Spain, and Poland — dubbed "E6." The group aims to break political deadlocks that have stalled efforts to create a U.S.-style financial market. Smaller countries fear the club will sideline dissenting voices in pursuit of a two-speed Europe.
-[Source](https://www.politico.eu/article/spain-reveals-eu-supergroup-e6-plan-challenge-us-and-china/)
+**4. Illa pledges "total commitment" to IRPF tax collection to unlock Catalan budget deal with ERC.** Catalan president Salvador Illa is working to secure ERC's support for the regional budget by reaffirming his promise to give Catalonia control over income tax collection — a key condition of the investiture pact. Business group Foment del Treball has called the budget agreement with the Comuns "philo-communist." ([La Vanguardia](https://www.lavanguardia.com/), [El Periódico](https://www.elperiodico.com/es/), [3cat](https://www.3cat.cat/3catinfo/))
 
-### Valencia Flood Study Confirms Climate Change Role
-A major new study has confirmed that the devastating flash flooding that hit Valencia in October 2024 was "intensified" by human-made climate change. Spain is still trying to heal its wounds and understand what went wrong almost two years after one of its worst floods in history. Record-high Mediterranean and North Atlantic temperatures in summer 2024 preceded the disaster.
-[Source](https://www.euronews.com/green/2026/02/19/valencias-deadly-flood-still-haunts-spain-would-it-have-happened-in-a-fossil-fuel-free-wor)
+**5. CIS poll shows PP and PSOE in a technical tie ahead of Castilla y León elections.** With just a week before the official campaign begins, Spain's public polling institute shows the conservative PP under Mañueco would win but fall short of an absolute majority, while PSOE closes the gap significantly. ([RTVE](https://www.rtve.es/noticias/espana/), [La Vanguardia](https://www.lavanguardia.com/), [El Periódico](https://www.elperiodico.com/es/))
 
-### IT Glitch Affecting Residency Processing Still Unfixed After Two Months
-A technical glitch in Spain's immigration processing system remains unresolved two months after it was first reported, causing significant delays for foreigners trying to obtain or renew residency permits. The issue has left many applicants in bureaucratic limbo.
-[Source](https://www.thelocal.es/20260220/today-in-spain-a-roundup-of-the-latest-news-on-friday-68)
+**6. Rufián's left-unity initiative meets widespread rejection.** Gabriel Rufián's proposal to unite Spain's fragmented left has been dismissed by virtually all potential allies — Podemos rejected it outright defending its autonomy, Sumar called for unity but on its own terms, and the broader left and independence movements remain focused on their own projects. ([El País](https://elpais.com/espana/), [El Mundo](https://www.elmundo.es/espana.html), [La Vanguardia](https://www.lavanguardia.com/))
 
-## Barcelona & Catalonia
+**7. Man kills his 10-year-old son and seriously injures the boy's mother in Tenerife.** A man fatally attacked his child and wounded his partner before being shot dead by the Guardia Civil in a horrific case of gender violence on the island. ([La Vanguardia](https://www.lavanguardia.com/), [El Periódico](https://www.elperiodico.com/es/), [3cat](https://www.3cat.cat/3catinfo/))
 
-### Barcelona Mayor "Would Ban" Non-EU Second Home Buyers
-Barcelona mayor Jaume Collboni said he would prohibit British, American, and other non-EU foreigners from buying second homes in the Catalan capital if he could. The statement reflects growing frustration with the impact of foreign investment on local housing affordability.
-[Source](https://www.thelocal.es/20260219/barcelona-mayor-would-ban-non-eu-second-home-owners)
+**8. Barcelona doctors strike to demand better working conditions.** Physicians took to the streets of Barcelona protesting for a separate collective agreement and improved working conditions, warning that the public health system risks collapsing "like Rodalies did." While official turnout was modest, the wave of appointment cancellations was described as unsustainable long-term. ([El Periódico](https://www.elperiodico.com/es/), [3cat](https://www.3cat.cat/3catinfo/))
 
-### Barcelona Investing €1M to Spread Tourism Beyond the City
-Barcelona is investing one million euros in a new "Barcelona Capital" initiative to redirect tourists toward other parts of Catalonia. The program will offer a curated selection of excursions from the city to different points across the region, promoting hidden landmarks, rural retreats, and authentic seasonal gastronomy.
-[Source](https://travelandtourworld.com/news/article/beyond-the-ramblas-how-the-new-barcelona-capital-initiative-is-redefining-regional-travel-in-catalonia)
+**9. Pisarello wins Barcelona en Comú primaries to be mayoral candidate.** Gerardo Pisarello defeated writer and TV personality Bob Pop in the party primary and will be Barcelona en Comú's candidate for mayor in the next municipal elections, increasing pressure on Mayor Collboni from the left. ([Tot Barcelona](https://www.totbarcelona.cat/), [3cat Barcelona](https://www.3cat.cat/3catinfo/barcelona-ciutat/))
 
-### Gaudí Confirmed as Architect of Xalet del Catllaràs
-The Government of Catalonia has published a report confirming Antoni Gaudí as the architect of Xalet del Catllaràs, an early 1900s chalet in northern Catalonia. The attribution settles a long-running debate about the origins of the building.
-[Source](https://www.dezeen.com/2026/02/19/xalet-del-catllaras-antoni-gaudi)
-
-### Barcelona to Give Over-55s €400/Month Housing Aid
-Barcelona has announced a new program providing residents over 55 with €400 per month to help with housing costs, addressing the city's severe affordability crisis that disproportionately affects older residents on fixed incomes.
-[Source](https://www.thelocal.es/20260219/today-in-spain-a-roundup-of-the-latest-news-on-thursday-66)
+**10. Costa Brava: Storm damage cleanup races to meet Easter deadline.** Torroella de Montgrí is urgently cleaning beaches battered by recent storms to have them ready for Semana Santa, while in Calonge the national coastal authority halted construction of new breakwaters due to technical errors. Meanwhile, 45% of the 26,000 homes in Palamós are not primary residences, highlighting the coast's ongoing housing pressure. ([Diari de Girona](https://www.diaridegirona.cat/baix-emporda/), [Empordà Info](https://www.emporda.info/tags/palafrugell/))
